add stdint.h check

--- a/stepmania/configure.ac
+++ b/stepmania/configure.ac
@@ -108,6 +108,7 @@ if test x$enable_gtk2 = xyes; then
 fi
 
 AC_CHECK_HEADER(linux/soundcard.h, [AC_DEFINE(HAVE_OSS, 1, [OSS support available])])
+AC_CHECK_HEADER(stdint.h, , [AC_DEFINE(MISSING_STDINT_H, 1, [stdint.h is missing])])
 AC_CHECK_HEADERS([inttypes.h])
 
 AM_CONDITIONAL(HAVE_ALSA, test x$alsa != xfalse )
