--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3792,6 +3792,7 @@ NumberOnCommand=shadowlength,0
 FootX=98
 FootY=-8
 FootOnCommand=shadowlength,0
+SeparateCourseMeters=0
 DifficultyX=120
 DifficultyY=-8
 DifficultyOnCommand=zoom,0.7;shadowlength,0
