--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3783,6 +3783,7 @@ ThreeLinesArtistCommand=zoom,0.6;maxwidth,266;y,10
 BarX=0
 BarY=0
 BarOnCommand=
+TextBannerName=TextBanner
 TextBannerX=0
 TextBannerY=0
 TextBannerOnCommand=shadowlength,0
