Default theme update for non joined player graphics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -566,6 +566,14 @@ StyleIcon=1
 MemoryCardIcons=1
 
 [ScreenSelectMusic]
+NonPresenceP1X=-128
+NonPresenceP1Y=240
+NonPresenceP1OnCommand=x,-128;sleep,0.5;linear,1.0;x,32;sleep,999;
+NonPresenceP1OffCommand=
+NonPresenceP2X=768
+NonPresenceP2Y=240
+NonPresenceP2OnCommand=x,768;sleep,0.5;linear,1.0;x,607;sleep,999;
+NonPresenceP2OffCommand=
 DefaultSort=GROUP
 FOV=0
 FOVCenterX=320
