--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1349,6 +1349,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="ScrollingList.h">
 			</File>
 			<File
+				RelativePath="SongCreditDisplay.cpp">
+			</File>
+			<File
+				RelativePath="SongCreditDisplay.h">
+			</File>
+			<File
 				RelativePath="SnapDisplay.cpp">
 			</File>
 			<File
