add missing metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1028,6 +1028,14 @@ PlayerNameP2X=0
 PlayerNameP2Y=0
 PlayerNameP2OnCommand=hidden,1
 PlayerNameP2OffCommand=
+StepsDescriptionP1X=0
+StepsDescriptionP1Y=0
+StepsDescriptionP1OnCommand=hidden,1
+StepsDescriptionP1OffCommand=
+StepsDescriptionP2X=0
+StepsDescriptionP2Y=0
+StepsDescriptionP2OnCommand=hidden,1
+StepsDescriptionP2OffCommand=
 SongOptionsX=320
 SongOptionsY=470
 SongOptionsOnCommand=zoom,0.5;addy,100;sleep,0.5;linear,1;addy,-100
