--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -10,8 +10,6 @@
 // - ScreenSelectDifficultyEX
 // - ScreenSelectGroup
 // - ScreenSelectMusic
-// - ScreenSelectStyle5th
-// - ScreenSelectStyle
 
 [Common]
 ColorP1=0.4,1.0,0.8,1		// sea green
@@ -56,6 +54,7 @@ Choice7=screen,ScreenExit
 Name7=EXIT
 Choice8=screen,ScreenTest
 Name8=SANDBOX
+NumCodes=0
 TimerSeconds=-1 // none
 StyleIcon=0
 MemoryCardIcons=0
@@ -107,6 +106,7 @@ Choice2=Style,versus;name,versus
 Choice3=Style,couple;name,couple
 Choice4=Style,double;name,double
 Choice5=Style,solo;name,solo
+NumCodes=0
 TimerSeconds=40
 StyleIcon=1
 MemoryCardIcons=1
@@ -268,6 +268,7 @@ Choice5=PlayMode,nonstop;name,nonstop
 Choice6=PlayMode,oni;name,oni
 Choice7=PlayMode,endless;name,endless
 Choice8=PlayMode,rave;name,rave
+NumCodes=0
 NumChoicesOnPage1=4
 TimerSeconds=40
 StyleIcon=1
