Allow for oni/nonstop/endless to be selected / disabled appropriately if elements all on page 1 of difficulty select screen

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -284,6 +284,7 @@ NextScreen8=ScreenInstructions
 LockInputSeconds=0.8
 SleepAfterChoiceSeconds=0.3
 SleepAfterTweenOffSeconds=0.8
+IgnoredElementOnCommand=diffuse,0.4,0.4,0.4,1
 MorePage1X=580
 MorePage1Y=90
 MorePage1OnCommand=diffusealpha,0;linear,0.5;diffusealpha,1
