rankings course list metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3481,6 +3481,7 @@ StepsTypesToHide=dance-couple,dance-solo,pump-halfdouble
 ShowCategories=1
 CoursesToShow=Courses/DDRMAX/NaokiStandard.crs,Courses/DDRMAX/ParanoiaBrothers.crs,Courses/Samples/PlayersBest1-4.crs
 ShowAllStepsScores=0
+ShowAllCourseScores=0
 DifficultiesToShow=easy,medium,hard,challenge
 NextScreen=ScreenUnlock
 
