add 3D scrolling to ActorScroller generalize BGAnimation, BGAnimationLayer to eliminate shared code with ActorFrame

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3342,6 +3342,8 @@ MemoryCardIcons=0
 TimerSeconds=0
 
 [ScreenUnlock]
+Fallback=ScreenAttract
+
 UseUnlocksDat=1
 TypeOfPointsToDisplay=DP
 TimeToDisplay=10
@@ -3477,6 +3479,8 @@ Unlock20X=250
 Unlock20Y=325
 
 [ScreenRanking]
+Fallback=ScreenAttract
+
 StepsTypesToHide=dance-couple,dance-solo,pump-halfdouble
 ShowCategories=1
 CoursesToShow=Courses/DDRMAX/NaokiStandard.crs,Courses/DDRMAX/ParanoiaBrothers.crs,Courses/Samples/PlayersBest1-4.crs
@@ -3597,21 +3601,32 @@ Line3=conf,AttractSoundFrequency
 Line4=conf,SoundVolume
 
 [ScreenIntroMovie]
+Class=ScreenAttract
+Fallback=ScreenAttract
 NextScreen=ScreenDemonstration
 
 [ScreenMemoryCard]
+Class=ScreenAttract
+Fallback=ScreenAttract
 NextScreen=ScreenWarning
 
 [ScreenWarning]
+Class=ScreenAttract
+Fallback=ScreenAttract
 NextScreen=ScreenCompany
 
 [ScreenCompany]
+Class=ScreenAttract
+Fallback=ScreenAttract
 NextScreen=ScreenLogo
 
 [ScreenAlbums]
+Class=ScreenAttract
+Fallback=ScreenAttract
 NextScreen=ScreenLogo
 
 [ScreenLogo]
+Fallback=ScreenAttract
 LogoOnCommand=x,320;y,240;zoomy,0;sleep,0.5;bounceend,0.5;zoomy,1;glowshift;effectperiod,2.5;effectcolor1,1,1,1,0.1;effectcolor2,1,1,1,0.3
 NextScreen=ScreenHowToPlay
 
