add loading of edits from a profile

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2911,6 +2911,7 @@ EasyColor=0.9,0.9,0,1		// yellow
 MediumColor=1,0.1,0.1,1		// light red
 HardColor=0.2,1,0.2,1		// light green
 ChallengeColor=0.2,0.6,1.0,1	// blue
+EditColor=0.8,0.8,0.8,1		// gray
 ExtraColor=1.0,0.0,0.0,1.0	// red
 ExtraColorMeter=10
 
@@ -3079,6 +3080,7 @@ EasyColor=0,0,0,0
 MediumColor=0,0,0,0
 HardColor=0,0,0,0
 ChallengeColor=0,0,0,0
+EditColor=0,0,0,0
 ShowStream=
 ShowVoltage=
 ShowAir=
