split Profile from ProfileManager

--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -714,6 +714,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="PlayerOptions.h">
 			</File>
 			<File
+				RelativePath="Profile.cpp">
+			</File>
+			<File
+				RelativePath="Profile.h">
+			</File>
+			<File
 				RelativePath=".\RandomSample.cpp">
 			</File>
 			<File
