--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1798,6 +1798,9 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="RageUtil_CharConversions.h">
 			</File>
 			<File
+				RelativePath="RageUtil_CircularBuffer.h">
+			</File>
+			<File
 				RelativePath="RageUtil_FileDB.cpp">
 			</File>
 			<File
