rename AutogenMissingTypes -> AutogenSteps

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3327,7 +3327,7 @@ PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
 OptionMenuFlags=rows,3;together;explanations
-Line1=conf,AutogenMissingTypes
+Line1=conf,AutogenSteps
 Line2=conf,AutogenGroupCourses
 Line3=conf,FastLoad
 
