--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1135,6 +1135,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath=".\Banner.h">
 			</File>
 			<File
+				RelativePath="ConditionalBGA.cpp">
+			</File>
+			<File
+				RelativePath="ConditionalBGA.h">
+			</File>
+			<File
 				RelativePath="DifficultyIcon.cpp">
 			</File>
 			<File
