add save screenshot code to eval screen

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3054,6 +3054,7 @@ Hidden=
 RandomVanish=
 // next banner group is used only in the banner song select, doesnt interfere
 // with other song select.
+SaveScreenshot=MenuLeft-MenuRight-Start
 
 [GrooveRadar]
 Label1OffsetX=0		// stream
