--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -37,7 +37,8 @@ CurrentModeZoom=1
 # Note that we don't use the "name" parameter to Choices here.  Name1 is
 # the displayed text, which might be translated or otherwise changed.  The "name,foo"
 # parameter to ModeChoices is an asset name, which is used in filenames.
-NumChoices=7 // no SANDBOX
+ChoiceNames=1,2,3,4,5,6,7
+//,8
 Choice1=screen,ScreenCaution
 Name1=GAME START
 Choice2=screen,ScreenSelectGame@ScreenOptionsMaster
@@ -99,7 +100,7 @@ BounceJoinMessage=1
 FoldOnJoin=1
 
 [ScreenSelectStyle]
-NumChoices=5
+ChoiceNames=1,2,3,4,5
 # The "name" here affects the announcer, eg. "ScreenSelectStyle comment single".
 Choice1=Style,single;name,single
 Choice2=Style,versus;name,versus
@@ -259,7 +260,7 @@ MemoryCardIcons=0
 TimerSeconds=0
 
 [ScreenSelectDifficulty]
-NumChoices=8
+ChoiceNames=1,2,3,4,5,6,7,8
 Choice1=PlayMode,arcade;Difficulty,beginner;name,beginner
 Choice2=PlayMode,arcade;Difficulty,easy;name,easy
 Choice3=PlayMode,arcade;Difficulty,medium;name,medium
