StageFrame CourseSongNumberChangeIn/Out

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -954,6 +954,10 @@ StageExtraX=320
 StageExtraY=422
 StageExtraOnCommand=addy,100;sleep,0.5;linear,1;addy,-100
 StageExtraOffCommand=linear,1;addy,100
+StageFrameX=0
+StageFrameY=0
+StageFrameOnCommand=hidden,1
+StageFrameOffCommand=
 SongNumberP1X=290
 SongNumberP1Y=54
 SongNumberP1OnCommand=addy,-100;sleep,0.5;linear,1;addy,100
@@ -974,6 +978,8 @@ CourseSongNumberX=0
 CourseSongNumberY=0
 CourseSongNumberOnCommand=hidden,1
 CourseSongNumberOffCommand=
+CourseSongNumberChangeInCommand=
+CourseSongNumberChangeOutCommand=
 ShowScoreInRave=1
 ScoreP1X=106
 ScoreP1Y=444
