use Fallback for ScreenEval, fix missing PassedSoundTime, etc. metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1142,7 +1142,13 @@ SongPositionMeterY=
 SongPositionMeterOnCommand=hidden,1
 SongPositionMeterOffCommand=
 
+[ScreenEvaluation]
+FailedSoundTime=0
+PassedSoundTime=0
+NumSequenceSounds=0
+
 [ScreenEvaluationStage]
+Fallback=ScreenEvaluation
 NextScreen=ScreenSelectMusic
 EndScreen=ScreenEvaluationSummary
 FailedScreen=ScreenGameOver
@@ -1174,9 +1180,6 @@ ShowFullCombo=0
 TimerSeconds=15
 StyleIcon=1
 MemoryCardIcons=1
-FailedSoundTime=0
-PassedSoundTime=0
-NumSequenceSounds=0
 ShowTotalScoreArea=0
 
 BannerWidth=248
@@ -1448,6 +1451,7 @@ NoMarvelousShiftUp=15
 FailedScreen=ScreenGameOver
 
 [ScreenEvaluationSummary]
+Fallback=ScreenEvaluation
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
 FailedScreen=ScreenGameOver
@@ -1753,6 +1757,7 @@ CheerDelaySeconds=2.5
 NoMarvelousShiftUp=15
 
 [ScreenEvaluationNonstop]
+Fallback=ScreenEvaluation
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
 FailedScreen=ScreenGameOver
@@ -1965,6 +1970,7 @@ CheerDelaySeconds=2.5
 NoMarvelousShiftUp=15
 
 [ScreenEvaluationOni]
+Fallback=ScreenEvaluation
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
 FailedScreen=ScreenGameOver
@@ -2177,6 +2183,7 @@ NoMarvelousShiftUp=15
 FailedScreen=ScreenGameOver
 
 [ScreenEvaluationEndless]
+Fallback=ScreenEvaluation
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
 FailedScreen=ScreenGameOver
@@ -2401,6 +2408,7 @@ NoMarvelousShiftUp=15
 FailedScreen=ScreenGameOver
 
 [ScreenEvaluationRave]
+Fallback=ScreenEvaluation
 NextScreen=ScreenSelectMusic
 EndScreen=ScreenEvaluationSummary
 FailedScreen=ScreenGameOver
