--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -24,7 +24,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/EHa"
 				Optimization="0"
-				AdditionalIncludeDirectories=".,SDL-1.2.6/include,SDL_image-1.2,vorbis,libjpeg"
+				AdditionalIncludeDirectories=".,SDL-1.2.6/include,SDL_image-1.2,vorbis,libjpeg,crypto51"
 				PreprocessorDefinitions="WIN32,_DEBUG,_WINDOWS,DEBUG"
 				ExceptionHandling="FALSE"
 				BasicRuntimeChecks="3"
@@ -2067,6 +2067,88 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 			</File>
 			<File
 				RelativePath="UnlockSystem.h">
+			</File>
+		</Filter>
+		<Filter
+			Name="cryptlib"
+			Filter="">
+			<File
+				RelativePath="crypto51\algparam.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\asn.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\basecode.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\channels.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\cryptlib.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\des.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\dessp.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\files.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\filters.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\fips140.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\hex.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\integer.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\iterhash.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\md5.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\misc.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\modes.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\mqueue.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\nbtheory.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\pkcspad.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\pssr.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\pubkey.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\queue.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\randpool.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\rsa.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\sha.cpp">
+			</File>
+			<File
+				RelativePath="crypto51\strciphr.cpp">
 			</File>
 		</Filter>
 		<File
