--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3696,12 +3696,13 @@ TimerSeconds=24
 MaxRankingNameLength=4
 StyleIcon=1
 MemoryCardIcons=1
-NextScreen=ScreenBranchEnding@ScreenBranch
+NextScreen=ScreenBranchEnding
 
 [ScreenBranchEnding]
+Class=ScreenBranch
 Choices=Credits,MusicScroll
-ConditionCredits=topgrade,>=,AA
-ConditionMusicScroll=
+ConditionCredits=GetBestFinalGrade() <= Grade("AA")
+ConditionMusicScroll=true
 NextScreenCredits=ScreenCredits
 NextScreenMusicScroll=ScreenMusicScroll
 
