--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -41,9 +41,9 @@ ChoiceNames=1,2,3,4,5,6,7
 //,8
 Choice1=screen,ScreenCaution
 Name1=GAME START
-Choice2=screen,ScreenSelectGame@ScreenOptionsMaster
+Choice2=screen,ScreenSelectGame
 Name2=SELECT GAME
-Choice3=screen,ScreenOptionsMenu@ScreenOptionsMaster
+Choice3=screen,ScreenOptionsMenu
 Name3=OPTIONS
 Choice4=screen,ScreenEditMenu
 Name4=EDIT/SYNC SONGS
@@ -3213,13 +3213,16 @@ TimerSeconds=20
 StyleIcon=1
 MemoryCardIcons=1
 
-[ScreenInputOptions]
+[ScreenOptionsSubmenu]
+Class=ScreenOptionsMaster
 StyleIcon=0
 MemoryCardIcons=0
 TimerSeconds=0
-PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
-NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+PrevScreen=ScreenOptionsMenu
+NextScreen=ScreenOptionsMenu
 
+[ScreenInputOptions]
+Fallback=ScreenOptionsSubmenu
 LineNames=1,2,3,4,5,6
 OptionMenuFlags=together;explanations
 Line1=conf,AutoMapOnJoyChange
@@ -3230,12 +3233,7 @@ Line5=conf,OptionsNavigation
 Line6=conf,WheelSpeed
 
 [ScreenCoinOptions]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
-PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
-NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
-
+Fallback=ScreenOptionsSubmenu
 LineNames=1,2,3,4
 OptionMenuFlags=together;explanations
 Line1=conf,CoinMode
@@ -3244,12 +3242,7 @@ Line3=conf,CoinsPerCredit
 Line4=conf,Premium
 
 [ScreenMachineOptions]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
-PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
-NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
-
+Fallback=ScreenOptionsSubmenu
 LineNames=1,2,3,4,5,6,7,8,9,10
 OptionMenuFlags=together;explanations
 Line1=conf,MenuTimer
@@ -3264,12 +3257,7 @@ Line9=conf,ShowSongOptions
 Line10=conf,ShowNameEntry
 
 [ScreenGraphicOptions]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
-PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
-NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
-
+Fallback=ScreenOptionsSubmenu
 LineNames=1,2,3,4,5,6,7,8,9,10,11,12
 OptionMenuFlags=together;explanations
 Line1=conf,DisplayMode
@@ -3286,12 +3274,7 @@ Line11=conf,ShowStats
 Line12=conf,ShowBanners
 
 [ScreenGameplayOptions]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
-PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
-NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
-
+Fallback=ScreenOptionsSubmenu
 LineNames=1,2,3,4,5,6,7
 OptionMenuFlags=together;explanations
 Line1=conf,SoloSingles
@@ -3303,12 +3286,7 @@ Line6=conf,PickExtraStage
 Line7=conf,UnlockSystem
 
 [ScreenBackgroundOptions]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
-PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
-NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
-
+Fallback=ScreenOptionsSubmenu
 LineNames=1,2,3,4,5,6
 OptionMenuFlags=together;explanations
 Line1=conf,BackgroundMode
@@ -3319,14 +3297,7 @@ Line5=conf,BeginnerHelper
 Line6=conf,RandomBackgrounds
 
 [ScreenAppearanceOptions]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
-
-
-PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
-NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
-
+Fallback=ScreenOptionsSubmenu
 LineNames=1,2,3,4,5,6,7,8,9,10,11,12,13
 OptionMenuFlags=together;explanations
 Line1=conf,Language
@@ -3344,17 +3315,21 @@ Line12=conf,Translations
 Line13=conf,Lyrics
 
 [ScreenOtherOptions]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
-PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
-NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
-
+Fallback=ScreenOptionsSubmenu
 LineNames=1,2,3
 OptionMenuFlags=together;explanations
 Line1=conf,AutogenSteps
 Line2=conf,AutogenGroupCourses
 Line3=conf,FastLoad
+
+[ScreenSoundOptions]
+Fallback=ScreenOptionsSubmenu
+LineNames=1,2,3,4
+OptionMenuFlags=together;explanations
+Line1=conf,PreloadSounds
+Line2=conf,ResamplingQuality
+Line3=conf,AttractSoundFrequency
+Line4=conf,SoundVolume
 
 [ScreenProfileOptions]
 Player1Profile=
@@ -3613,21 +3588,6 @@ Time3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
 Time4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
 Time5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
 
-[ScreenSoundOptions]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
-
-PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
-NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
-
-LineNames=1,2,3,4
-OptionMenuFlags=together;explanations
-Line1=conf,PreloadSounds
-Line2=conf,ResamplingQuality
-Line3=conf,AttractSoundFrequency
-Line4=conf,SoundVolume
-
 [ScreenIntroMovie]
 Class=ScreenAttract
 Fallback=ScreenAttract
@@ -3784,9 +3744,9 @@ Row7Y=320
 Row8Y=360
 
 [ScreenOptionsMenu]
-StyleIcon=0
-MemoryCardIcons=1
-TimerSeconds=0
+Fallback=ScreenOptionsSubmenu
+NextScreen=ScreenTitleMenu
+PrevScreen=ScreenTitleMenu
 
 # "Rows" sets the number of rows; this field is required.
 #
@@ -3805,8 +3765,6 @@ TimerSeconds=0
 LineNames=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
 OptionMenuFlags=together;forceallplayers;smnavigation
 # This NextScreen is only used for the "exit" choice.
-NextScreen=ScreenTitleMenu
-PrevScreen=ScreenTitleMenu
 Line1=list,Appearance Options
 Line2=list,Background Options
 Line3=list,Bookkeeping
@@ -3874,9 +3832,7 @@ TipShowTime=1
 TipOnCommand=
 
 [ScreenSelectGame]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
+Fallback=ScreenOptionsSubmenu
 PrevScreen=ScreenTitleMenu
 NextScreen=ScreenTitleMenu
 
@@ -3958,8 +3914,8 @@ TimerSeconds=30
 StyleIcon=0
 MemoryCardIcons=0
 
-PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
-NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+PrevScreen=ScreenOptionsMenu
+NextScreen=ScreenOptionsMenu
 
 LineNames=1,2,3,4,5,6,7,8
 OptionMenuFlags=
@@ -4232,13 +4188,13 @@ SaveScores,2=mod,savescore;name,On
 # ScreenOptionsMenu
 Appearance Options=1,together
 Appearance OptionsDefault=
-Appearance Options,1=screen,ScreenAppearanceOptions@ScreenOptionsMaster;name,AppearanceOptions
+Appearance Options,1=screen,ScreenAppearanceOptions;name,AppearanceOptions
 Other Options=1,together
 Other OptionsDefault=
-Other Options,1=screen,ScreenOtherOptions@ScreenOptionsMaster;name,OtherOptions
+Other Options,1=screen,ScreenOtherOptions;name,OtherOptions
 Background Options=1,together
 Background OptionsDefault=
-Background Options,1=screen,ScreenBackgroundOptions@ScreenOptionsMaster;name,BackgroundOptions
+Background Options,1=screen,ScreenBackgroundOptions;name,BackgroundOptions
 Bookkeeping=1,together
 BookkeepingDefault=
 Bookkeeping,1=screen,ScreenBookkeeping;name,Bookkeeping
@@ -4247,25 +4203,25 @@ Center ImageDefault=
 Center Image,1=screen,ScreenCenterImage;name,CenterImage
 Coin Options=1,together
 Coin OptionsDefault=
-Coin Options,1=screen,ScreenCoinOptions@ScreenOptionsMaster;name,CoinOptions
+Coin Options,1=screen,ScreenCoinOptions;name,CoinOptions
 Config Key/Joy Mappings=1,together
 Config Key/Joy MappingsDefault=
 Config Key/Joy Mappings,1=screen,ScreenMapControllers;name,KeyJoyMappings
 Input Options=1,together
 Input OptionsDefault=
-Input Options,1=screen,ScreenInputOptions@ScreenOptionsMaster;name,InputOptions
+Input Options,1=screen,ScreenInputOptions;name,InputOptions
 Gameplay Options=1,together
 Gameplay OptionsDefault=
-Gameplay Options,1=screen,ScreenGameplayOptions@ScreenOptionsMaster;name,GameplayOptions
+Gameplay Options,1=screen,ScreenGameplayOptions;name,GameplayOptions
 Graphic Options=1,together
 Graphic OptionsDefault=
-Graphic Options,1=screen,ScreenGraphicOptions@ScreenOptionsMaster;name,GraphicOptions
+Graphic Options,1=screen,ScreenGraphicOptions;name,GraphicOptions
 Machine Options=1,together
 Machine OptionsDefault=
-Machine Options,1=screen,ScreenMachineOptions@ScreenOptionsMaster;name,MachineOptions
+Machine Options,1=screen,ScreenMachineOptions;name,MachineOptions
 Sound Options=1,together
 Sound OptionsDefault=
-Sound Options,1=screen,ScreenSoundOptions@ScreenOptionsMaster;name,SoundOptions
+Sound Options,1=screen,ScreenSoundOptions;name,SoundOptions
 Profile Options=1,together
 Profile OptionsDefault=
 Profile Options,1=screen,ScreenProfileOptions;name,ProfileOptions
