--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1143,6 +1143,7 @@ SongPositionMeterOnCommand=hidden,1
 SongPositionMeterOffCommand=
 
 [ScreenEvaluation]
+Class=ScreenEvaluation
 FailedSoundTime=0
 PassedSoundTime=0
 NumSequenceSounds=0
